--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
         "*.ino": "cpp"
     },
     "particle.targetPlatform": "boron",
-    "particle.targetDevice": "Sampler_7_Molina",
+    "particle.targetDevice": "Sampler-CT1",
     "particle.firmwareVersion": "5.2.0",
     "C_Cpp.errorSquiggles": "enabled"
 }
