fixed blynk connection issue
to work with config.h, some of the blynk library and token information had to be moved around. Tested and works now.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
         "*.ino": "cpp"
     },
     "particle.targetPlatform": "boron",
-    "particle.targetDevice": "Sampler-CT1",
-    "particle.firmwareVersion": "6.1.1",
+    "particle.targetDevice": "Sampler_21",
+    "particle.firmwareVersion": "6.2.1",
     "C_Cpp.errorSquiggles": "disabled"
 }
